--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.3.24",
     "eslint": "^8.30.0",
-    "eslint-config-next": "^13.0.7"
+    "eslint-config-next": "^13.0.7",
+    "eslint-config-prettier": "^8.6.0"
   }
 }
